--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My website
+title: My website for the world
 subtitle: This is where I will tell my friends way too much about me
 ---
 
