--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ layout: home
 title: Hello! Welcome to my web-home!
 subtitle: This is where I will tell my friends way too much about me
 ---
-
+<!-- default favicon -->
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+I am best known as a current PhD student in the Precision Biosystems Laboratory at Georgia Tech!
