--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: home
-title: Hello! Welcome to my web-home!
-subtitle: This is where I will tell my friends way too much about me
----
+title: Mighten Yip
 <!-- default favicon -->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<!-- subtitle: This is where I will tell my friends way too much about me -->
+---
+
 I am best known as a current PhD student in the Precision Biosystems Laboratory at Georgia Tech!
