--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@ title: Mighten Yip
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 I am best known as a current PhD student in the Precision Biosystems Laboratory at Georgia Tech!
 
-## Main paramaters
+Testing
 
-These are the basic YAML parameters that you are most likely to use on most pages.
+Testing
+1
 
-Parameter   | Description
------------ | -----------
-title       | Page or blog post title
-subtitle    | Short description of page or blog post that goes under the title
-tags        | List of tags to categorize the post. Separate the tags with commas and place them inside square brackets. Example: `[personal, analysis, finance]`
-cover-img   | Include a large full-width image at the top of the page.  You can either give the path to a single image, or provide a list of images to cycle through (see [my personal website](https://deanattali.com/) as an example).
-comments    | If you want do add comments to a specific page, use `comments: true`. Comments only work if you enable one of the comments providers (Facebook, disqus, staticman, utterances) in `_config.yml` file. Comments are automatically enabled on blog posts but not on other pages; to turn comments off for a specific post, use `comments: false`. 
+2
+
+
+3
