--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@ title: Mighten Yip
 <!-- subtitle: This is where I will tell my friends way too much about me -->
 
 ---
-<!-- default favicon -->
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<html>
+	<head>	
+	<!-- default favicon -->
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+</head>head>
+</html>
 
 I am best known as a current PhD student in the Precision Biosystems Laboratory at Georgia Tech!
 
