--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@ title: Mighten Yip
 	<head>	
 	<!-- default favicon -->
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-</head>head>
-</html>
+	</head>
 
+<body>
 I am best known as a current PhD student in the Precision Biosystems Laboratory at Georgia Tech!
 
 Testing
 
 Testing
-1
+<ul>
+	<li>C</li>
+	<li>Il</li>
+	<li>Wil</li>
+	<li>Colb</li>
+	<li>Craigellechie</li>
+</ul>	
+<img src="assets/img/usc-seal.png" alt="School seal of USC">
+<img src="assets/img/gt-seal.png" alt="School seal of GT">
+</body>
 
-2
 
-
-3
+</html>
