--- a/index.html
+++ b/index.html
@@ -9,20 +9,11 @@ title: Mighten Yip
 
 
 <body>
-	I am best known as a current PhD student in the Precision Biosystems Laboratory at Georgia Tech!
+	I am best known as a current PhD candidate in the Precision Biosystems Laboratory at Georgia Tech!
+	
 
-	Testing
-
-	Testing
-	<ul>
-		<li>C</li>
-		<li>Il</li>
-		<li>Wil</li>
-		<li>Colb</li>
-		<li>Craigellechie</li>
-	</ul>	
-	<img src="assets/img/usc-seal.png" alt="School seal of USC">
 	<img src="assets/img/gt-seal.png" alt="School seal of GT">
+	<img src="assets/img/usc-seal.png" alt="School seal of USC">
 </body>
 
 
