--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Mighten Yip
 	I am best known as a current PhD candidate in the Precision Biosystems Laboratory at Georgia Tech!
 	
 
-	<img src="assets/img/gt-seal.png" alt="School seal of GT">
+	<img src="assets/img/gt-seal.png" alt="School seal of GT" width="200"> 
+
 	<img src="assets/img/usc-seal.png" alt="School seal of USC">
 </body>
 
