--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@ title: Mighten Yip
 <body>
 	I am best known as a current PhD candidate in the Precision Biosystems Laboratory at Georgia Tech!
 	
-
-	<img src="assets/img/gt-seal.png" alt="School seal of GT" width="200"> 
-
-	<img src="assets/img/usc-seal.png" alt="School seal of USC">
+	In my spare time, working to empower current biotech/life sciences graduate students in the Atlanta area to spin out startups from their research!
+	
+	<p align="center">
+	<img src="assets/img/gt-seal.png" alt="School seal of GT" width="500"> 
+	</p>
+	<p align="center">
+	<img src="assets/img/usc-seal.png" alt="School seal of USC" width="400">
+	</p>
 </body>
 
 
