--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 ---
 layout: home
-title: Mighten Yip
-<!-- subtitle: This is where I will tell my friends way too much about me -->
-
+title: "Mighten Yip"
+subtitle: "Engineering‑driven biotech founder • Robotics • AI for life sciences"
 ---
-<html>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
+<div class="hero">
+  <h1>Hi, I'm Mighten.</h1>
+  <p>I build robotics, therapeutics, and AI systems that ship.</p>
+  <div class="cta">
+    <a class="btn-primary" href="#projects">View projects</a>
+    <a class="btn-ghost" href="/aboutme">About me</a>
+  </div>
+</div>
 
-<body>
-	I am best known as a current PhD candidate in the Precision Biosystems Laboratory at Georgia Tech!
-	
-	In my spare time, working to empower current biotech/life sciences graduate students in the Atlanta area to spin out startups from their research with Nucleate!
-	
-	<p align="center">
-	<img src="assets/img/gt-seal.png" alt="School seal of GT" width="400"> 
-	</p>
-	<p align="center">
-	<img src="assets/img/usc-seal.png" alt="School seal of USC" width="400">
-	</p>
-</body>
+### <span class="section-title" id="projects">Featured projects</span>
 
-
-</html>
+<div class="projects-grid">
+  {% for item in site.data.projects %}
+    {% include portfolio-card.html item=item %}
+  {% endfor %}
+</div>
