--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 ---
-layout: home
+layout: page
 title: "Mighten Yip"
-subtitle: "Engineering‑driven biotech founder • Robotics • AI for life sciences"
+subtitle: "Engineering-driven biotech founder • Robotics • AI for life sciences"
 ---
 
-<div class="hero">
-  <h1>Hi, I'm Mighten.</h1>
-  <p>I build robotics, therapeutics, and AI systems that ship.</p>
-  <div class="cta">
-    <a class="btn-primary" href="#projects">View projects</a>
-    <a class="btn-ghost" href="/aboutme">About me</a>
-  </div>
+<div class="about-hero">
+  <img class="avatar" src="{{ site.avatar }}" alt="Mighten Yip headshot">
+  <h1 class="name">Mighten Yip</h1>
+  <p class="tagline">I build robotics, therapeutics, and AI systems that ship.</p>
+
+  {% include social-list.html %}
 </div>
 
-### <span class="section-title" id="projects">Featured projects</span>
+### What I'm about
+Founder @ Palate Therapeutics & Neuromatic Devices; AI tools for experimental design.  
+Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).  
+I prototype fast, operate in the lab and the field, and ship.
 
-<div class="projects-grid">
-  {% for item in site.data.projects %}
-    {% include portfolio-card.html item=item %}
-  {% endfor %}
-</div>
+> Want the portfolio? Head to **[Projects](/projects)**.
