Redesign homepage: smaller avatar on left, about section on right, remove navbar avatar

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@ subtitle: "Engineering-driven biotech founder • Robotics • AI for life scien
 ---
 
 <div class="about-hero">
-  <h1 class="name">Mighten Yip</h1>
-  <p class="tagline">I build robotics, therapeutics, and AI systems that ship.</p>
-
-  {% include social-list.html %}
+  <div class="hero-content">
+    <div class="hero-left">
+      <img class="avatar" src="{{ site.avatar }}" alt="Mighten Yip headshot">
+      <h1 class="name">Mighten Yip</h1>
+      <p class="tagline">I build robotics, therapeutics, and AI systems that ship.</p>
+      {% include social-list.html %}
+    </div>
+    <div class="hero-right">
+      <h3>What I'm about</h3>
+      <p>Founder @ Palate Therapeutics & Neuromatic Devices; AI tools for experimental design.</p>
+      <p>Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).</p>
+      <p>I prototype fast, operate in the lab and the field, and ship.</p>
+      <blockquote>
+        Want to see some of my work? Head to <strong><a href="/projects">my portfolio</a></strong>.
+      </blockquote>
+    </div>
+  </div>
 </div>
-
-### What I'm about
-Founder @ Palate Therapeutics & Neuromatic Devices; AI tools for experimental design.  
-Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).  
-I prototype fast, operate in the lab and the field, and ship.
-
-> Want the portfolio? Head to **[Projects](/projects)**.
