Shrink hero avatar to 120px for more compact layout like reference image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ subtitle: "Engineering-driven biotech founder • Robotics • AI for life scien
 <div class="about-hero">
   <div class="hero-content">
     <div class="hero-left">
-      <img class="avatar" src="{{ site.avatar }}" alt="Mighten Yip headshot">
+      <img class="avatar" src="{{ site.landing-avatar }}" alt="Mighten Yip headshot">
       <h1 class="name">Mighten Yip</h1>
       <p class="tagline">I build robotics, therapeutics, and AI systems that ship.</p>
       {% include social-list.html %}
