Reduce hero avatar size from 120px to 80px for more compact layout

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@ subtitle: "Engineering-driven biotech founder • Robotics • AI for life scien
     </div>
     <div class="hero-right">
       <h3>What I'm about</h3>
-      <p>Founder @ Palate Therapeutics & Neuromatic Devices; AI tools for experimental design.</p>
-      <p>Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).</p>
-      <p>I prototype fast, operate in the lab and the field, and ship.</p>
+      <p>Founder @ Palate Therapeutics (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic disesaes) & Neuromatic Devices (AI and robotic tools for neuroscience).</p>
+      <p>Previously: Nucleate Atlanta founder; PhD Bioengineering (Georgia Tech).</p>
       <blockquote>
         Want to see some of my work? Head to <strong><a href="/projects">my portfolio</a></strong>.
       </blockquote>
