--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ subtitle: "Engineering-driven biotech founder • Robotics • AI for life scien
     <div class="hero-left">
       <img class="avatar" src="{{ site.landing-avatar }}" alt="Mighten Yip headshot">
       <h1 class="name">Mighten Yip</h1>
-      <p class="tagline">I build robotics, therapeutics, and AI systems that ship.</p>
+      <p class="tagline">I love building systems that deploy. Recently, I have worked in object-detection using ML, biotech/neuroscience, and electromechanical control systems.</p>
       {% include social-list.html %}
     </div>
     <div class="hero-right">
