Switch from Beautiful Jekyll to Minimal Mistakes theme - update config, layouts, and navigation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
-layout: page
+layout: single
 title: "Mighten Yip"
 subtitle: "Engineering-driven biotech founder • Robotics • AI for life sciences"
+classes: wide
 ---
 
 <div class="about-hero">
