Complete Minimal Mistakes migration: new config, navigation, collections, and project files

--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 ---
-layout: home
-title: Mighten Yip
-<!-- subtitle: This is where I will tell my friends way too much about me -->
-
+layout: splash
+title: "Mighten Yip"
+subtitle: "Engineering-driven biotech founder • Robotics • AI for life sciences"
+permalink: /
+header:
+  overlay_color: "#000"
+  overlay_filter: 0.2
+# optional: simple hero buttons
+actions:
+  - label: "Projects"
+    url: /projects/
+  - label: "Contact"
+    url: mailto:mightenyip@gmail.com
 ---
-<html>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
+I build robotics, therapeutics, and AI systems that ship.  
+Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
-<body>
-	I am best known as a current PhD candidate in the Precision Biosystems Laboratory at Georgia Tech!
-	
-	In my spare time, working to empower current biotech/life sciences graduate students in the Atlanta area to spin out startups from their research with Nucleate!
-	
-	<p align="center">
-	<img src="assets/img/gt-seal.png" alt="School seal of GT" width="400"> 
-	</p>
-	<p align="center">
-	<img src="assets/img/usc-seal.png" alt="School seal of USC" width="400">
-	</p>
-</body>
-
-
-</html>
+> Want the portfolio? Head to **[Projects](/projects/)**.
