Enhance homepage: add prominent projects button for better navigation

--- a/index.html
+++ b/index.html
@@ -17,4 +17,7 @@ actions:
 I build robotics, therapeutics, and AI systems that ship.  
 Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
-> Want the portfolio? Head to **[Projects](/projects/)**.
+> Want the portfolio? Head here to see **[my selected projects](/projects/)**.
+
+{: .text-center}
+[View All Projects](/projects/){: .btn .btn--primary .btn--large}
