Enhance homepage: add subtitle to body content and social links section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@ actions:
     url: mailto:mightenyip@gmail.com
 ---
 
-I build robotics, therapeutics, and AI systems that ship.  
+**Engineering-driven biotech founder • Robotics • AI for life sciences**
+
+Founder @ Palate Therapeutics (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic disesaes) & Neuromatic Devices (AI and robotic tools for neuroscience)
 Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
 > Want the portfolio? Head here to see **[my selected projects](/projects/)**.
 
-{: .text-center}
-[View All Projects](/projects/){: .btn .btn--primary .btn--large}
+## Connect with me
+
+- [<i class="fas fa-envelope"></i> Email](mailto:mightenyip@gmail.com)
+- [<i class="fab fa-github"></i> GitHub](https://github.com/mightenyip){:target="_blank"}
+- [<i class="fab fa-twitter"></i> Twitter](https://twitter.com/patcherBot){:target="_blank"}
+- [<i class="fab fa-linkedin"></i> LinkedIn](https://www.linkedin.com/in/mightenyip/){:target="_blank"}
+- [<i class="fas fa-graduation-cap"></i> Google Scholar](https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en){:target="_blank"}
