Add custom ordering and uniform image sizing for projects - all teaser images now 300x300px squares

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: splash
-title: "Mighten Yip"
+title: "DMs open, let's chat!"
 subtitle: "Engineering-driven biotech founder • Robotics • AI for life sciences"
 permalink: /
 header:
@@ -23,8 +23,6 @@ Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
 ## Connect with me
 
-- [<i class="fas fa-envelope"></i> Email](mailto:mightenyip@gmail.com)
 - [<i class="fab fa-github"></i> GitHub](https://github.com/mightenyip){:target="_blank"}
 - [<i class="fab fa-twitter"></i> Twitter](https://twitter.com/patcherBot){:target="_blank"}
 - [<i class="fab fa-linkedin"></i> LinkedIn](https://www.linkedin.com/in/mightenyip/){:target="_blank"}
-- [<i class="fas fa-graduation-cap"></i> Google Scholar](https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en){:target="_blank"}
