Fix homepage layout and remove feed link: change to single layout for proper content display, add action buttons and complete social links

--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 ---
-layout: splash
-title: "DMs open, let's chat!"
+layout: single
+title: "Mighten Yip"
 subtitle: "Engineering-driven biotech founder • Robotics • AI for life sciences"
 permalink: /
-header:
-  overlay_color: "#000"
-  overlay_filter: 0.2
-# optional: simple hero buttons
-actions:
-  - label: "Projects"
-    url: /projects/
-  - label: "Contact"
-    url: mailto:mightenyip@gmail.com
+classes: wide
 ---
 
 **Engineering-driven biotech founder • Robotics • AI for life sciences**
@@ -19,10 +11,15 @@ actions:
 Founder @ Palate Therapeutics (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic disesaes) & Neuromatic Devices (AI and robotic tools for neuroscience)
 Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
+{: .text-center}
+[View Projects](/projects/){: .btn .btn--primary .btn--large} [Contact Me](mailto:mightenyip@gmail.com){: .btn .btn--success .btn--large}
+
 > Want the portfolio? Head here to see **[my selected projects](/projects/)**.
 
 ## Connect with me
 
+- [<i class="fas fa-envelope"></i> Email](mailto:mightenyip@gmail.com)
 - [<i class="fab fa-github"></i> GitHub](https://github.com/mightenyip){:target="_blank"}
 - [<i class="fab fa-twitter"></i> Twitter](https://twitter.com/patcherBot){:target="_blank"}
 - [<i class="fab fa-linkedin"></i> LinkedIn](https://www.linkedin.com/in/mightenyip/){:target="_blank"}
+- [<i class="fas fa-graduation-cap"></i> Google Scholar](https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en){:target="_blank"}
