Update homepage content with revised description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ classes: wide
 ---
 
 Founder @ Palate Therapeutics (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic disesaes) & Neuromatic Devices (AI and robotic tools for neuroscience)
+
+Past work has included: object-detection using ML, biotech/neuroscience, and electromechanical control systems.
+
 Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
 
