--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ classes: wide
 
 Founder @ Palate Therapeutics (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic disesaes) & Neuromatic Devices (AI and robotic tools for neuroscience)
 
-Past work has included: [object-detection using ML](/projects/phd/), [biotech/neuroscience](/projects/palate/), and [electromechanical control systems](/projects/patcherbot/).
+Past work has included: object-detection using ML, biotech/neuroscience, and electromechanical control systems.
 
 Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
 
