--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 ---
-layout: single
+layout: splash
 permalink: /
-classes: wide
+header:
+  overlay_color: "#000"
+  overlay_filter: 0.3
+  overlay_image: /assets/img/projects/robot-ap-ai.png
+  actions:
+    - label: "View Projects"
+      url: /projects/
+    - label: "Contact Me"
+      url: mailto:mightenyip@gmail.com
+  caption: "Photo credit: **Mighten Yip**"
 ---
 
-Founder @ Palate Therapeutics (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic disesaes) & Neuromatic Devices (AI and robotic tools for neuroscience)
+## About Me
+
+**Founder @ Palate Therapeutics** (CPG mint and therapeutic strategy for reducing sugar consumption in metabolic diseases) & **Neuromatic Devices** (AI and robotic tools for neuroscience).
 
 Past work has included: object-detection using ML, biotech/neuroscience, and electromechanical control systems.
 
 Previously: Nucleate Atlanta lead; PhD Bioengineering (Georgia Tech).
+
+{% include feature_row id="intro" type="center" %}
+
+## Connect
+
+{: .text-center}
+- [<i class="fas fa-envelope"></i> Email](mailto:mightenyip@gmail.com)
+- [<i class="fab fa-github"></i> GitHub](https://github.com/mightenyip){:target="_blank"}
+- [<i class="fab fa-twitter"></i> Twitter](https://twitter.com/patcherBot){:target="_blank"}
+- [<i class="fab fa-linkedin"></i> LinkedIn](https://www.linkedin.com/in/mightenyip/){:target="_blank"}
+- [<i class="fas fa-graduation-cap"></i> Google Scholar](https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en){:target="_blank"}
 
 
 
